--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,10 @@ modules = [
 
 name = "Haseeb"
 
+dev = true
+# Activates dev features which include:
+# 1) Event logs
+# 2) Error raising instead of suppressing in .handle() and the event loop.
 
 
 
