--- a/config.toml
+++ b/config.toml
@@ -38,11 +38,13 @@ name = "gemini"
 #this is essential for proper config transfer
 
 [model.gemini]
+
 api_key = "load:secrets.txt"
 
 # all model classes follow this scheme. 
 # The api_key value can either be the literal api key OR
-# you can use 'load:' prefix to load the key from a file. 
+# you can use 'load:' prefix to load the key from a file.
+# Obviously this does'nt apply for local models 
 
 # api_key = "123abc" will also work
 
