--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,13 @@ readme = "README.md"
 requires-python = ">=3.7"
 dependencies = []
 
-[project.scripts]
-
 [build-system]
 requires = ["setuptools>=61"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["sapphire"]
+packages = ["sapphire", "sapphire_ctl"]
+
+[project.scripts]
+sapphire = "sapphire.main:main"
+sapphire-tui = "sapphire_ctl.tui.main:main"
