Working on temporary GUI since TUI is proving to be hell

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,6 @@ packages = ["halogen"]
 
 [project.scripts]
 halogen = "halogen.core.main:main"
-halogen-tui = "halogen.ctl.tui.main:main"
+halogen-gui = "halogen.ctl.gui.main:main"
 halogen-cli = "halogen.ctl.cli.main:main"
 
